# Vapoursynth-llvmexpr

./: .clang-tidy  .clangd  .gitignore  CODE_OF_CONDUCT.md  README.md  RECURSIVE_IMPLEMENTATION.md  checks.json  llvmexpr.def.in  llvmexpr.exp.in  llvmexpr.ver.in  meson.build  meson_options.txt  pyproject.toml  pytest.ini  simple_test.py  test_recursive.py
.cursor/rules/: llvm-version-rule.mdc
.github/workflows/: Build.yml  build.yml  linux-build.yml  linux-glibc-build.yml  linux-musl-build.yml  macos-build.yml  windows-build.yml
benchmarks/: benchmark.py
docs/: adding_a_standard_library.md  infix.md  migrating_from_akarin.md  postfix.md  specification.md
examples/: 8x8dct.expr  8x8idct.expr  area_filter.expr  nl-means.expr
exprutils/: __init__.py  _sorting_networks.py  infix2postfix.py  postfix2infix.py  utils.py
llvmexpr/: Analysis.cpp  Analysis.hpp  Compiler.cpp  Compiler.hpp  ExprIRGenerator.cpp  ExprIRGenerator.hpp  IRGenerator.cpp  IRGenerator.hpp  IRGeneratorBase.cpp  IRGeneratorBase.hpp  InfixConverter.cpp  InfixConverter.hpp  Jit.hpp  SingleExprIRGenerator.cpp  Tokenizer.cpp  Tokenizer.hpp  fastmath.hpp  llvmexpr.cpp  math_compiler.hpp  math_config.hpp  math_functions.hpp  math_library.hpp  optimal_sorting_networks.hpp
llvmexpr-vsc/: package.json
llvmexpr-vsc/syntaxes/: llvmexpr-infix.tmLanguage.json
llvmexpr/analysis/: AnalysisResults.hpp  ExpressionAnalyzer.cpp  ExpressionAnalyzer.hpp
llvmexpr/analysis/framework/: AnalysisError.hpp  AnalysisManager.cpp  AnalysisManager.hpp  AnalysisResults.hpp  DataStructures.hpp  ForwardDataflowAnalysis.hpp  Pass.hpp  PreservedAnalyses.hpp
llvmexpr/analysis/passes/: BlockAnalysisPass.cpp  BlockAnalysisPass.hpp  BuildCFGPass.cpp  BuildCFGPass.hpp  ConstPropPass.cpp  ConstPropPass.hpp  CoordinateUsagePass.cpp  CoordinateUsagePass.hpp  DynamicArrayAllocOptPass.cpp  DynamicArrayAllocOptPass.hpp  RelAccessAnalysisPass.cpp  RelAccessAnalysisPass.hpp  StackSafetyPass.cpp  StackSafetyPass.hpp  StaticAllocReachabilityPass.cpp  StaticAllocReachabilityPass.hpp  StaticArrayOptPass.cpp  StaticArrayOptPass.hpp  ValidationPass.cpp  ValidationPass.hpp  VarInitPass.cpp  VarInitPass.hpp  VariableUsagePass.cpp  VariableUsagePass.hpp
llvmexpr/analysis/utils/: VarNaming.hpp
llvmexpr/frontend/: Analysis.cpp  Analysis.hpp  InfixConverter.cpp  InfixConverter.hpp  Tokenizer.cpp  Tokenizer.hpp
llvmexpr/frontend/infix2postfix/: AST.hpp  ASTPrinter.cpp  ASTPrinter.hpp  AnalysisEngine.cpp  AnalysisEngine.hpp  Builtins.cpp  Builtins.hpp  CodeGenerator.cpp  CodeGenerator.hpp  OverloadResolution.hpp  Parser.cpp  Parser.hpp  PostfixBuilder.cpp  PostfixBuilder.hpp  PostfixHelper.cpp  PostfixHelper.hpp  Preprocessor.cpp  Preprocessor.hpp  SemanticAnalyzer.cpp  SemanticAnalyzer.hpp  StandardLibrary.cpp  StandardLibrary.hpp  Symbol.hpp  SymbolTable.cpp  SymbolTable.hpp  Tokenizer.cpp  Tokenizer.hpp  main.cpp  types.hpp
llvmexpr/frontend/infix2postfix/stdlib/: Algorithms.hpp  LibraryBase.hpp  Meta.hpp  algorithms.expr  meta.expr
llvmexpr/infix2postfix/: AST.hpp  CodeGenerator.cpp  CodeGenerator.hpp  Parser.cpp  Parser.hpp  PostfixHelper.cpp  PostfixHelper.hpp  Tokenizer.cpp  Tokenizer.hpp  main.cpp  types.hpp
llvmexpr/ir/: ExprIRGenerator.cpp  ExprIRGenerator.hpp  IRGeneratorBase.cpp  IRGeneratorBase.hpp  SingleExprIRGenerator.cpp  SingleExprIRGenerator.hpp
llvmexpr/jit/: Compiler.cpp  Compiler.hpp  Jit.cpp  Jit.hpp
llvmexpr/utils/: Diagnostics.cpp  Diagnostics.hpp  EnumName.hpp  Math.hpp  Sorting.cpp  Sorting.hpp
scripts/: convert_network.py  generate_optimal_sorting_networks.py  optimal_networks.txt
sctipts/: convert_network.py
subprojects/: ctre.wrap
subprojects/packagefiles/ctre/: meson.build
tests/: test_approx_math.py  test_control_flow.py  test_expr.py  test_expr_std.py  test_infix2postfix.py  test_optimization_passes.py  test_single_expr.py
